--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <header>
-      <img class="image.left" src="images/grain-left.svg" alt"">
-      <img class="image.left" src="images/grain-right.svg" alt"">
+      <img class="image-left" src="images/grain-left.svg" alt"">
+      <img class="image-right" src="images/grain-right.svg" alt"">
       <h1>
         Grains
       </h1>
       <div class="nav">
         <nav>
           <ul>
-            <li>Home</li>
-            <li>Cereals</li>
-            <li>Legumes</li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Cereals</a></li>
+            <li><a href="">Legumes</a></li>
           </ul>
         </nav>
       </div>
